Update for gpu change

--- a/environment_win.yml
+++ b/environment_win.yml
@@ -8,9 +8,9 @@ dependencies:
   - bzip2=1.0.8=he774522_0
   - ca-certificates=2022.12.7=h5b45459_0
   - certifi=2022.12.7=pyhd8ed1ab_0
-  - cudatoolkit=11.7.0=ha6f8bbd_10
-  - cudatoolkit-dev=11.7.0=h9f2f4db_6
-  - cupy=11.6.0=py310h782d1bb_0
+  # - cudatoolkit=11.7.0=ha6f8bbd_10
+  # - cudatoolkit-dev=11.7.0=h9f2f4db_6
+  # - cupy=11.6.0=py310h782d1bb_0
   - curl=7.88.1=h2bbff1b_0
   - fastrlock=0.8=py310h8a704f9_2
   - future=0.18.3=py310haa95532_0
